# autonomous

./: pyproject.toml  readme-ts.md  readme.md
autonomous/: DOCKERFILE  base.py  build.py  google_export.py  simple.py  table_api.py  test_simple.py
autonomous/patterns/: memory_storage.py  python_api.py  storage.py
autonomous/slack_bot/: main.py
autonomous/vc_outbound/: crunchbase.py  email.py  pdl.py  seed_investors.py
patterns/: config.py  execution.py
